pause button created in UI

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <div class="controller">
     <button class="start-btn">Start</button>
+    <button class="pause-btn">Pause</button>
   </div>
 
   <script src="count-down.js"></script>
