Reset the timer and update time when clicks the reset button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
   <div class="controller">
     <button class="start-btn">Start</button>
-    <button class="pause-btn">Pause</button>
+    <button class="pause-btn controll">Pause</button>
+    <button class="reset-btn controll">Reset</button>
   </div>
 
   <script src="count-down.js"></script>
