button's reset start and pause icon added in buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Count Down timer App</title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
   
@@ -16,9 +17,9 @@
 
 
   <div class="controller">
-    <button class="start-btn">Start</button>
-    <button class="pause-btn controll">Pause</button>
-    <button class="reset-btn controll">Reset</button>
+    <button class="start-btn material-symbols-outlined">play_arrow</button>
+    <button class="pause-btn material-symbols-outlined controll">Pause</button>
+    <button class="reset-btn material-symbols-outlined controll">Refresh</button>
   </div>
 
   <script src="count-down.js"></script>
