--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Count Down timer App</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.topology.min.js"></script>
 </head>
 <body>
   
@@ -24,4 +26,5 @@
 
   <script src="count-down.js"></script>
 </body>
+<script src="animation.js"></script>
 </html>
